--- a/DWM-App/app/src/main/res/drawable/outline_read_more_24.xml
+++ b/DWM-App/app/src/main/res/drawable/outline_read_more_24.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="?attr/textColor"
+    android:tint="@color/buttonPrimary"
     android:autoMirrored="true">
   <path
       android:fillColor="@android:color/white"
