--- a/DWM-App/app/src/main/res/layout/popup_image.xml
+++ b/DWM-App/app/src/main/res/layout/popup_image.xml
@@ -8,8 +8,8 @@
 
     <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
         android:id="@+id/popupBottleImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:adjustViewBounds="true"
         android:layout_centerInParent="true"
@@ -23,5 +23,12 @@
         android:layout_centerInParent="true"
         android:visibility="visible"
         android:indeterminate="true" />
+
+    <ImageView
+        android:id="@+id/closeIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/close_icon" />
 
 </RelativeLayout>
