--- a/JuryBriefingApp/app/src/main/res/layout/activity_presentation.xml
+++ b/JuryBriefingApp/app/src/main/res/layout/activity_presentation.xml
@@ -14,6 +14,6 @@
         app:layout_constraintTop_toTopOf="parent">
     </ImageView>
 
-    <include layout="@layout/loading_panel" />
+    <include layout="@layout/progress_bar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
